--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "grunt": "^1.0.4",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "^4.0.1",
     "grunt-contrib-watch": "^1.1.0"
+  },
+  "devDependencies": {
+    "grunt-contrib-sass": "^1.0.0"
   }
 }
